--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "hakoiko-theme",
-    "title": "Hakoiko Theme",
+    "name": "hakoiko-syntax-theme",
+    "title": "Hakoiko Syntax Theme",
     "description": "Hakoiko Theme for Brackets. Inspired from tumblr.com HTML Editor",
     "homepage": "",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "author": "Suchan Kim <hakoiko@gmail.com> ",
     "license": "MIT",
     "theme": {
